Fix Product Page UI for Bundles with Flex Wrap to the Price

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -211,7 +211,7 @@
 }
 
 .quick-add-modal__content-info {
-  --modal-padding: 2.5rem;
+  --modal-padding: 1rem;
   padding-right: 4.4rem;
   display: flex;
   overflow-y: auto;
